fixing inner wrap to actually overlay the entire background

--- a/newsrc/code/media/com_acctexp/less/aec/base.less
+++ b/newsrc/code/media/com_acctexp/less/aec/base.less
@@ -8,7 +8,8 @@
 }
 
 .aec-wrap-inner-light {
-	background: rgba(255,255,255,0.25);
+	background: rgba(255,255,255,0.5);
+	float: left;
 }
 
 .aec-wrap-squared {
